--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,4 +1,6 @@
 .headerConatiner {
+    position: relative;
+    z-index: 2;
     display: flex;
     justify-content: center;
     align-items: center;
