--- a/src/components/MenuHeader/styles.css
+++ b/src/components/MenuHeader/styles.css
@@ -1,12 +1,14 @@
 .menuHeaderContainer {
+    position: relative;
     display: flex;
     justify-content: center;
 
     width: 100%;
     height: 40px;
-    background-color: white;
-    border-bottom: 1px solid #cecece;
-    box-shadow: 0 2px 2px -2px #333;
+    background-color: #1a1a1a;
+    border-top: 1px solid #424141;
+    box-shadow: 0 6px 6px 2px #333;
+    box-shadow: 2px 2px 15px #15050594;
 }
 
 .menuHeaderContainer ul {
@@ -30,7 +32,7 @@
     font-size: 0.8em;
     font-weight: 600;
     padding: 0 20px;
-    color: black;
+    color: rgb(204, 202, 202);
     cursor: pointer;
 }
 
