--- a/src/components/MenuHeader/styles.css
+++ b/src/components/MenuHeader/styles.css
@@ -7,7 +7,6 @@
     height: 40px;
     background-color: #1a1a1a;
     border-top: 1px solid #424141;
-    box-shadow: 0 6px 6px 2px #333;
     box-shadow: 2px 2px 15px #15050594;
 }
 
@@ -32,27 +31,27 @@
     font-size: 0.8em;
     font-weight: 600;
     padding: 0 20px;
-    color: rgb(204, 202, 202);
+    color: rgb(236, 235, 235);
     cursor: pointer;
 }
 
-
 .menuHeaderContainer > ul > li > ul {
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     left: 0px;
     right: 0px;
-    background-color: white;
-    border: 1px solid #cecece;
+    border: 1px solid #1d1d1d;
     display: none;
     font-size: 0.8em;
     min-height: 40px;
     padding-top: 5px;
     padding-bottom: 5px;
+    background-color: #1a1a1a71;
 }
 
 .menuHeaderContainer > ul > li:hover ul{
     display: block;
+    
 }
 
 .menuHeaderContainer > ul > li > ul > li {
@@ -66,7 +65,7 @@
 
 .menuHeaderContainer li, a {
     list-style: none;
-    color: black;
+    color: white;
     text-decoration: none;
 }
 
@@ -81,6 +80,6 @@
     display: block;
     font-size: 12px;
     text-decoration: none;
-    color: #707070;
+    color: #ffffff;
 }
 
