--- a/src/components/MenuHeader/styles.css
+++ b/src/components/MenuHeader/styles.css
@@ -1,5 +1,6 @@
 .menuHeaderContainer {
     position: relative;
+    z-index: 11;
     display: flex;
     justify-content: center;
 
@@ -7,7 +8,7 @@
     height: 40px;
     background-color: #1a1a1a;
     border-top: 1px solid #424141;
-    box-shadow: 2px 2px 15px #15050594;
+    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.548);
 }
 
 .menuHeaderContainer ul {
