--- a/src/components/MenuHeader/styles.css
+++ b/src/components/MenuHeader/styles.css
@@ -8,7 +8,7 @@
     height: 40px;
     background-color: #1a1a1a;
     border-top: 1px solid #424141;
-    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.548);
+    /*box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.548);*/
 }
 
 .menuHeaderContainer ul {
