--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,15 +1,16 @@
 .headerConatiner {
     position: relative;
     z-index: 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 200px;
+    background-color: #1a1a1a;
+}
 
+.header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
     width: 100%;
     height: 80px;
-    background-color: #1a1a1a;
 }
 
 .logo-input-search-container {
