--- a/src/components/MenuHeader/styles.css
+++ b/src/components/MenuHeader/styles.css
@@ -6,6 +6,7 @@
 
     width: 100%;
     height: 40px;
+    background-color: rgb(24, 22, 22);
     background-color: #1a1a1a;
     border-top: 1px solid #424141;
     /*box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.548);*/
@@ -48,6 +49,7 @@
     padding-top: 5px;
     padding-bottom: 5px;
     background-color: #1a1a1a71;
+    background-color: #1a1a1a;
 }
 
 .menuHeaderContainer > ul > li:hover ul{
