--- a/src/pages/ProductList/styles.css
+++ b/src/pages/ProductList/styles.css
@@ -2,7 +2,7 @@
     background-color: #ededed;
     background-color: #f2f3f4;
     background-color: #ffffff;
-    height: 1000px;
+    height: 60vh;
     padding-top: 20px;
 }
 
@@ -18,7 +18,7 @@
     justify-content: center;
     align-items: center;
     background-color: #ededee;
-    width: 80%;
+    width: 100%;
     height: 100px; 
 }
 
