--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -4,6 +4,10 @@
     background-color: #1a1a1a;
 }
 
+.headerConatiner span {
+    color: white;
+}
+
 .header-content {
     display: flex;
     justify-content: space-between;
