--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: white;
+    color: #110f0f;
     font-family: "Poppins", serif;
 }
